[gd_scene load_steps=13 format=2]

[ext_resource path="res://tiles/buildings/buildings.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://map_objects/Teleporter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Maps/scripts/Map1.gd" type="Script" id=4]
[ext_resource path="res://tiles/asphalt.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/table/tileset_table.tres" type="TileSet" id=6]
[ext_resource path="res://Scenes/UI.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/FreeSans.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://sprites/sign_KeichiTS.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.0313726, 1, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 61.9268, 36.5211 )

[sub_resource type="Animation" id=3]
resource_name = "event"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Map1" type="Node2D"]
script = ExtResource( 4 )

[node name="tiles" type="Node2D" parent="."]

[node name="asphalt" parent="tiles" instance=ExtResource( 5 )]
tile_data = PoolIntArray( 0, 0, 196608, 1, 0, 6, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 5, 6, 0, 196609, 7, 0, 196609, 8, 0, 196609, 9, 0, 196609, 10, 0, 196609, 11, 0, 196609, 12, 0, 196609, 13, 0, 196609, 14, 0, 196609, 15, 0, 196609, 16, 0, 7, 65537, 0, 65536, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65538, 65552, 0, 65539, 131073, 0, 65536, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65538, 131088, 0, 65539, 196609, 0, 65536, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 131077, 196614, 0, 1, 196615, 0, 1, 196616, 0, 1, 196617, 0, 1, 196618, 0, 1, 196619, 0, 1, 196620, 0, 1, 196621, 0, 1, 196622, 0, 1, 196623, 0, 1, 196624, 0, 131079, 262144, 0, 0, 262145, 0, 131078, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65538, 327680, 0, 65536, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65541, 327689, 0, 131073, 327690, 0, 131073, 327691, 0, 131073, 327692, 0, 65542, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65538, 393216, 0, 65536, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65541, 393221, 0, 131073, 393222, 0, 131073, 393223, 0, 65542, 393224, 0, 65538, 393228, 0, 65536, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65538, 458752, 0, 65536, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65538, 458759, 0, 65536, 458760, 0, 65538, 458764, 0, 65536, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65538, 524288, 0, 65536, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65538, 524295, 0, 65536, 524296, 0, 65538, 524300, 0, 65536, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65538, 589824, 0, 65536, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65538, 589831, 0, 65536, 589832, 0, 131077, 589833, 0, 2, 589835, 0, 0, 589836, 0, 131078, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65538, 655360, 0, 65536, 655361, 0, 65537, 655362, 0, 65537, 655363, 0, 65537, 655364, 0, 131077, 655365, 0, 1, 655366, 0, 1, 655367, 0, 131078, 655368, 0, 65537, 655369, 0, 65538, 655371, 0, 65536, 655372, 0, 65537, 655373, 0, 65537, 655374, 0, 65537, 655375, 0, 65537, 655376, 0, 65538, 720896, 0, 65536, 720897, 0, 65537, 720898, 0, 65537, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65537, 720904, 0, 65537, 720905, 0, 65538, 720907, 0, 65536, 720908, 0, 65537, 720909, 0, 65537, 720910, 0, 65537, 720911, 0, 65537, 720912, 0, 65538, 786432, 0, 131072, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131073, 786439, 0, 131073, 786440, 0, 131073, 786441, 0, 196613, 786442, 0, 196609, 786443, 0, 196614, 786444, 0, 131073, 786445, 0, 131073, 786446, 0, 131073, 786447, 0, 131073, 786448, 0, 131074 )

[node name="buildings" parent="tiles" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -1, 0, 4, -65536, 0, 196609, -65535, 0, 196609, -65534, 0, 196609, -65533, 0, 196609, -65532, 0, 196609, -65531, 0, 196609, -65530, 0, 196609, -65529, 0, 196609, -65528, 0, 196609, -65527, 0, 196609, -65526, 0, 196609, -65525, 0, 196609, -65524, 0, 196609, -65523, 0, 196609, -65522, 0, 196609, -65521, 0, 196609, -65520, 0, 196609, -65519, 0, 7, 65535, 0, 65539, 17, 0, 65539, 131071, 0, 131076, 65536, 0, 1, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 1, 65553, 0, 131079, 196607, 0, 65536, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65538, 262143, 0, 65540, 196608, 0, 131073, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 131073, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131073, 196619, 0, 131073, 196620, 0, 131073, 196621, 0, 131073, 196622, 0, 131073, 196623, 0, 131073, 196624, 0, 131073, 196625, 0, 65543, 327679, 0, 65539, 262161, 0, 65539, 393215, 0, 65539, 327697, 0, 65539, 458751, 0, 65539, 393220, 0, 0, 393221, 0, 1, 393222, 0, 2, 393225, 0, 0, 393226, 0, 1, 393227, 0, 2, 393233, 0, 65539, 524287, 0, 65539, 458756, 0, 65536, 458757, 0, 65537, 458758, 0, 65538, 458761, 0, 65536, 458762, 0, 65537, 458763, 0, 65538, 458769, 0, 65539, 589823, 0, 65539, 524292, 0, 65536, 524293, 0, 65537, 524294, 0, 65538, 524297, 0, 65536, 524298, 0, 65537, 524299, 0, 65538, 524305, 0, 65539, 655359, 0, 65539, 589828, 0, 65536, 589829, 0, 65537, 589830, 0, 65538, 589833, 0, 65536, 589834, 0, 65537, 589835, 0, 65538, 589841, 0, 65539, 720895, 0, 65539, 655364, 0, 65536, 655365, 0, 65537, 655366, 0, 65538, 655369, 0, 65536, 655370, 0, 65537, 655371, 0, 65538, 655377, 0, 65539, 786431, 0, 65539, 720900, 0, 65536, 720901, 0, 65537, 720902, 0, 65538, 720905, 0, 65536, 720906, 0, 65537, 720907, 0, 65538, 720913, 0, 65539, 851967, 0, 65539, 786436, 0, 65536, 786437, 0, 65537, 786438, 0, 65538, 786441, 0, 65536, 786442, 0, 65537, 786443, 0, 65538, 786449, 0, 65539, 917503, 0, 196612, 851968, 0, 196609, 851969, 0, 196609, 851970, 0, 196609, 851971, 0, 196609, 851972, 0, 196614, 851973, 0, 131073, 851974, 0, 196613, 851975, 0, 196609, 851976, 0, 196609, 851977, 0, 196614, 851978, 0, 131073, 851979, 0, 196613, 851980, 0, 196609, 851981, 0, 196609, 851982, 0, 196609, 851983, 0, 196609, 851984, 0, 196609, 851985, 0, 196615 )

[node name="table" type="TileMap" parent="tiles"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( 65536, 0, 0, 65537, 0, 1, 65538, 0, 1, 65539, 0, 1, 65540, 0, 1, 65541, 0, 1, 65542, 0, 1, 65543, 0, 1, 65544, 0, 1, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 1, 65550, 0, 1, 65551, 0, 1, 65552, 0, 2, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65538, 196608, 0, 131072, 196609, 0, 131073, 196610, 0, 131073, 196611, 0, 131073, 196612, 0, 131073, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 131073, 196616, 0, 131073, 196617, 0, 131073, 196618, 0, 131073, 196619, 0, 131073, 196620, 0, 131073, 196621, 0, 131073, 196622, 0, 131073, 196623, 0, 131073, 196624, 0, 131074, 393220, 0, 0, 393221, 0, 1, 393222, 0, 2, 393225, 0, 0, 393226, 0, 1, 393227, 0, 2, 458756, 0, 65536, 458757, 0, 65537, 458758, 0, 65538, 458761, 0, 65536, 458762, 0, 65537, 458763, 0, 65538, 524292, 0, 65536, 524293, 0, 65537, 524294, 0, 65538, 524297, 0, 65536, 524298, 0, 65537, 524299, 0, 65538, 589828, 0, 65536, 589829, 0, 65537, 589830, 0, 65538, 589833, 0, 65536, 589834, 0, 65537, 589835, 0, 65538, 655364, 0, 65536, 655365, 0, 65537, 655366, 0, 65538, 655369, 0, 65536, 655370, 0, 65537, 655371, 0, 65538, 720900, 0, 65536, 720901, 0, 65537, 720902, 0, 65538, 720905, 0, 65536, 720906, 0, 65537, 720907, 0, 65538, 786436, 0, 131072, 786437, 0, 131073, 786438, 0, 131074, 786441, 0, 131072, 786442, 0, 131073, 786443, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 675.362, 530.218 )

[node name="Teleporter" parent="." instance=ExtResource( 3 )]
position = Vector2( 2.12, 458.345 )
choose_map = 1
spawn_position = Vector2( 125, 450 )

[node name="UI" parent="." instance=ExtResource( 7 )]

[node name="sign" type="StaticBody2D" parent="."]
position = Vector2( 749.539, 211.899 )

[node name="Sprite" type="Sprite" parent="sign"]
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="sign"]
margin_left = -57.0
margin_top = -49.0
margin_right = 57.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.490196, 0.556863, 0, 1 )
text = "WASD
or
ARROWS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="sign"]
position = Vector2( 0, -17 )
shape = SubResource( 2 )

[node name="on_screen" type="AnimationPlayer" parent="."]
anims/event = SubResource( 3 )
