[gd_scene load_steps=6 format=2]

[ext_resource path="res://tiles/water/water.tscn" type="PackedScene" id=1]
[ext_resource path="res://tiles/buildings/buildings.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://map_objects/Teleporter.tscn" type="PackedScene" id=4]
[ext_resource path="res://Maps/scripts/Map1.gd" type="Script" id=5]

[node name="Map10" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="water" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 262162, 0, 0, 262163, 0, 1, 262164, 0, 2, 327697, 0, 0, 327698, 0, 131078, 327699, 0, 65537, 327700, 0, 131077, 327701, 0, 2, 393223, 0, 4, 393224, 0, 196609, 393225, 0, 196609, 393226, 0, 7, 393232, 0, 0, 393233, 0, 131078, 393234, 0, 65537, 393235, 0, 65537, 393236, 0, 65537, 393237, 0, 131077, 393238, 0, 2, 458759, 0, 65539, 458762, 0, 196612, 458763, 0, 196609, 458764, 0, 7, 458768, 0, 65536, 458769, 0, 65537, 458770, 1073741824, 65537, 458771, 0, 65537, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 131077, 458775, 0, 2, 524294, 0, 4, 524295, 0, 196615, 524300, 0, 65539, 524304, 0, 131072, 524305, 0, 65542, 524306, 1073741824, 65537, 524307, 0, 65537, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65541, 524311, 0, 131074, 589830, 0, 65539, 589836, 0, 65539, 589841, 0, 131072, 589842, 0, 65542, 589843, 0, 65537, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65538, 655366, 0, 65539, 655371, 0, 4, 655372, 0, 196615, 655378, 0, 131072, 655379, 0, 65542, 655380, 0, 65537, 655381, 0, 65541, 655382, 0, 131074, 720902, 0, 65539, 720907, 0, 65539, 720915, 0, 131072, 720916, 0, 131073, 720917, 0, 131074, 786438, 0, 65539, 786443, 0, 65539, 851974, 0, 196612, 851975, 0, 7, 851979, 0, 65539, 917511, 0, 196612, 917512, 0, 196609, 917513, 0, 6, 917514, 0, 5, 917515, 0, 196615, 983049, 0, 131072, 983050, 0, 131074 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1350, 370 )
collision_mask = 23

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true

[node name="buildings" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( 0, 1073741824, 4, 1, 1073741824, 196609, 2, 1073741824, 196609, 3, 1073741824, 196609, 4, 1073741824, 196609, 5, 1073741824, 196609, 6, 1073741824, 8, 7, 1073741824, 196609, 8, 1073741824, 196609, 9, 1073741824, 196609, 10, 1073741824, 196609, 11, 1073741824, 196609, 12, 1073741824, 8, 13, 1073741824, 196609, 14, 1073741824, 196609, 15, 1073741824, 196609, 16, 1073741824, 196609, 17, 1073741824, 196609, 18, 1073741824, 196609, 19, 1073741824, 196609, 20, 1073741824, 196609, 21, 1073741824, 196609, 22, 1073741824, 8, 23, 1073741824, 196609, 24, 1073741824, 196609, 25, 1073741824, 196609, 26, 1073741824, 196609, 27, 1073741824, 196609, 28, 1073741824, 196609, 29, 1073741824, 196609, 30, 1073741824, 7, 65536, 1073741824, 65539, 65542, 1073741824, 65539, 65548, 1073741824, 65539, 65558, 1073741824, 65539, 65566, 1073741824, 65539, 131072, 1073741824, 65539, 131078, 1073741824, 65539, 131084, 1073741824, 65539, 131094, 1073741824, 65539, 131102, 1073741824, 65539, 196608, 1073741824, 65539, 196614, 1073741824, 65539, 196620, 1073741824, 65539, 196630, 1073741824, 65539, 196638, 1073741824, 65539, 262144, 1073741824, 65539, 262150, 1073741824, 65539, 262156, 1073741824, 65539, 262166, 1073741824, 65539, 262174, 1073741824, 65539, 327680, 1073741824, 65539, 327686, 1073741824, 65539, 327692, 1073741824, 65539, 327702, 1073741824, 131075, 327710, 1073741824, 131075, 393216, 1073741824, 65539, 393222, 1073741824, 65539, 393228, 1073741824, 65539, 458752, 1073741824, 65539, 458758, 1073741824, 131075, 458764, 1073741824, 131075, 524288, 1073741824, 131075, 655382, 1073741824, 3, 655390, 1073741824, 3, 720908, 1073741824, 3, 720918, 1073741824, 65539, 720926, 1073741824, 65539, 786444, 1073741824, 65539, 786454, 1073741824, 65539, 786462, 1073741824, 65539, 851980, 1073741824, 65539, 851990, 1073741824, 65539, 851998, 1073741824, 65539, 917504, 1073741824, 3, 917510, 1073741824, 3, 917516, 1073741824, 131075, 917526, 1073741824, 65539, 917534, 1073741824, 65539, 983040, 1073741824, 65539, 983046, 1073741824, 65539, 983051, 1073741824, 3, 983053, 1073741824, 3, 983062, 1073741824, 65539, 983070, 1073741824, 65539, 1048576, 1073741824, 65539, 1048582, 1073741824, 65539, 1048587, 1073741824, 65539, 1048589, 1073741824, 65539, 1048598, 1073741824, 65539, 1048606, 1073741824, 65539, 1114112, 1073741824, 65539, 1114118, 1073741824, 65539, 1114123, 1073741824, 65539, 1114125, 1073741824, 65539, 1114134, 1073741824, 65539, 1114142, 1073741824, 65539, 1179648, 1073741824, 65539, 1179654, 1073741824, 65539, 1179659, 1073741824, 131075, 1179661, 1073741824, 131075, 1179670, 1073741824, 65539, 1179678, 1073741824, 65539, 1245184, 1073741824, 65539, 1245190, 1073741824, 65539, 1245196, 1073741824, 3, 1245206, 1073741824, 65539, 1245214, 1073741824, 65539, 1310720, 1073741824, 196612, 1310721, 1073741824, 196609, 1310722, 1073741824, 196609, 1310723, 1073741824, 196609, 1310724, 1073741824, 196609, 1310725, 1073741824, 196609, 1310726, 1073741824, 196616, 1310727, 1073741824, 196609, 1310728, 1073741824, 196609, 1310729, 1073741824, 196609, 1310730, 1073741824, 196609, 1310731, 1073741824, 196609, 1310732, 1073741824, 196616, 1310733, 1073741824, 196609, 1310734, 1073741824, 196609, 1310735, 1073741824, 196609, 1310736, 1073741824, 196609, 1310737, 1073741824, 196609, 1310738, 1073741824, 196609, 1310739, 1073741824, 196609, 1310740, 1073741824, 196609, 1310741, 1073741824, 196609, 1310742, 1073741824, 196616, 1310743, 1073741824, 196609, 1310744, 1073741824, 196609, 1310745, 1073741824, 196609, 1310746, 1073741824, 196609, 1310747, 1073741824, 196609, 1310748, 1073741824, 196609, 1310749, 1073741824, 196609, 1310750, 1073741824, 196615 )

[node name="Teleporter" parent="." instance=ExtResource( 4 )]
position = Vector2( 15.2513, 527.558 )
choose_map = 8
map = 9
spawn_position = Vector2( 150, 525 )

[node name="Teleporter2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1454.78, 383.419 )
choose_map = 5
map = 9
spawn_position = Vector2( 1350, 370 )
